fixed way too big bottom margin in row configuration

--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,7 @@
         margin-left: 1rem;
         margin-right: 1rem;
         gap: 3rem;
+        margin-bottom: 0rem;
     }
 
     .weather{
@@ -119,6 +120,7 @@
         display: flex;
         flex-direction: row;
         gap: 4.5rem;
+        margin-bottom: 0rem;
     }
 
     .weather{
